# recode

./: .gitignore  CLAUDE.md  README.md  build-ffmpeg.sh  build-mac.sh  install.sh  package.sh  recode_server.py  requirements.txt
mac-app/Recode GPU Server.app/Contents/: Info.plist
mac-app/Recode GPU Server.app/Contents/MacOS/: mkvextract  recode-remote
mac-app/Recode GPU Server.app/Contents/Resources/: AppIcon.icns
macos/: recode-remote
remote-gpu/: server-0.jsonc
rrp/: Cargo.toml
rrp/.cargo/: config.toml
rrp/rrp-app/: Cargo.toml
rrp/rrp-app/src/: client.rs  connect.rs  gui.rs  listener.rs  main.rs  server.rs
rrp/rrp-client/: Cargo.toml
rrp/rrp-client/src/: main.rs
rrp/rrp-mac/: Cargo.toml
rrp/rrp-mac/src/: main.rs
rrp/rrp-proto/: Cargo.toml
rrp/rrp-proto/src/: lib.rs
rrp/rrp-server/: Cargo.toml
rrp/rrp-server/src/: main.rs
rrp/rrp-wasm/: index.html  rrp_gui.js  rrp_gui_bg.wasm
static/: index.html  login.html  setup.html
