[workspace]
members = ["rrp-proto", "rrp-app"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
hmac = "0.12"
sha2 = "0.10"
anyhow = "1"
