[package]
name = "rrp-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recode-remote"
path = "src/main.rs"

[features]
default = ["fuse"]
fuse = ["dep:fuser", "dep:libc"]

[dependencies]
rrp-proto = { path = "../rrp-proto" }
tokio = { workspace = true }
tokio-util = "0.7"
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
serde_json = "1"
fuser = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }
