[package]
name = "rrp-mac"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recode-gpu-server"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tray-icon = "0.19"
