[package]
name = "rrp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recode-remote-server"
path = "src/main.rs"

[dependencies]
rrp-proto = { path = "../rrp-proto" }
tokio = { workspace = true }
tokio-util = "0.7"
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
fuser = "0.14"
libc = "0.2"
